# OS-Class-Labs-IV-Semester-

./: .gitignore  .gitmodules  README.md
1_lab/src/linux/: graph.py  log.csv  newForkBomb
1_lab/src/windows/: forkBomb.cpp  graph.py  log.csv
2_lab/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  calloc  cmake_install.cmake  linux  mmap  mmap_linux  mmap_linux.c
2_lab/src/: calloc_linux  calloc_linux.c  mmap_linux.c  virtualAlloc_windows.cpp
3_lab/: README.md
4_lab/: README.md  bench.sh
5_lab/output/: btrfs.html  ext4.html  ntfs.html
6_lab/: README.md  hook.c  log.csv  main  main.c  newlog.csv  tglog.csv
7_lab/: asm  asm.s
